[package]
name = "mmap-allocator"
version = "0.1.0"
authors = ["Elia Geretto <elia.f.geretto@gmail.com>"]
edition = "2018"
description = "An `mmap`-based allocator for *nix systems"
categories = ["memory-management"]
repository = "https://github.com/EliaGeretto/mmap-allocator"
license = "MIT"

[features]
default = ["std"]
std = ["libc/std"]

[dependencies]
libc = { version = "0.2.97", default-features = false }
page_size = "0.4.2"
